# tsuzulint

./: .coderabbit.yaml  .gitignore  .markdownlint.json  .markdownlint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.en.md  README.md  TEST_SUMMARY.md  add_test.py  bench_script  clippy.toml  codecov.yml  current_tests.txt  deny.toml  earlier_tests.txt  file_finder.diff  file_finder_92fee42.rs  find_empty_tests.py  fix_core2.patch  fix_test.py  fix_test.rs  fix_wasmi_tests_2.py  fix_wasmi_tests_3.py  justfile  lcov.info  linter.diff  linter_8f60dd5.rs  new_file_finder_tests.txt  new_linter_tests.txt  old_tests.txt  output.txt  patch.diff  patch_extism.py  patch_fix.diff  (+38 more)
crates/texide_ast/: Cargo.toml
crates/texide_ast/src/: arena.rs  lib.rs  node.rs  node_type.rs  span.rs
crates/texide_ast/src/visitor/: mod.rs  visit.rs  visit_mut.rs  walk.rs
crates/texide_cache/: Cargo.toml
crates/texide_cache/src/: entry.rs  lib.rs  manager.rs
crates/texide_cli/: Cargo.toml
crates/texide_cli/src/: main.rs
crates/texide_cli/tests/: cli_behavior.rs
crates/texide_core/: Cargo.toml
crates/texide_core/src/: config.rs  lib.rs  linter.rs  resolver.rs  result.rs
crates/texide_core/src/formatters/: mod.rs  sarif.rs
crates/texide_lsp/: Cargo.toml
crates/texide_lsp/src/: lib.rs  main.rs
crates/texide_plugin/: Cargo.toml
crates/texide_plugin/src/: diagnostic.rs  executor.rs  executor_wasmi.rs  host.rs  lib.rs  manifest.rs
crates/texide_wasm/: Cargo.toml  build.sh  package.json
crates/texide_wasm/src/: lib.rs
crates/tsuzulint_ast/: Cargo.toml  README.md
crates/tsuzulint_ast/src/: arena.rs  lib.rs  node.rs  node_type.rs  span.rs
crates/tsuzulint_ast/src/visitor/: mod.rs  visit.rs  visit_mut.rs  walk.rs
crates/tsuzulint_cache/: Cargo.toml  README.md
crates/tsuzulint_cache/src/: entry.rs  error.rs  lib.rs  manager.rs
crates/tsuzulint_cli/: .tsuzulint.jsonc  Cargo.toml  README.md
crates/tsuzulint_cli/src/: cli.rs  fix.rs  main.rs
crates/tsuzulint_cli/src/commands/: init.rs  lint.rs  lsp.rs  mod.rs  plugin.rs  rules.rs
crates/tsuzulint_cli/src/config/: editor.rs  mod.rs
crates/tsuzulint_cli/src/output/: json.rs  mod.rs  sarif.rs  text.rs
crates/tsuzulint_cli/src/utils/: mod.rs  safe_io.rs
crates/tsuzulint_cli/tests/: add_rule_integration.rs  cli_behavior.rs  cli_commands.rs  plugin_install.rs  security_symlink.rs  test_rules_create.rs
crates/tsuzulint_cli/tests/fixtures/: sample.md  sample.txt
crates/tsuzulint_core/: Cargo.toml  README.md  tests_metadata.rs  tests_to_run.rs
crates/tsuzulint_core/src/: block_extractor.rs  config.rs  context.rs  diagnostic_dist.rs  error.rs  file_finder.rs  file_linter.rs  fix.rs  fixer.rs  ignore_range.rs  lib.rs  linter.rs  manifest_resolver.rs  parallel_linter.rs  pool.rs  resolver.rs  result.rs  rule_loader.rs  rule_manifest.rs  safe_io.rs  test_utils.rs  walker.rs
crates/tsuzulint_core/tests/: linter_parallel.rs
crates/tsuzulint_lsp/: Cargo.toml  README.md
crates/tsuzulint_lsp/src/: config.rs  conversion.rs  debounce.rs  lib.rs  state.rs
crates/tsuzulint_lsp/src/handler/: files.rs  (+5 more)
crates/tsuzulint_lsp/tests/: common_mod.rs  debounce_test.rs
crates/tsuzulint_manifest/: Cargo.toml  README.md
crates/tsuzulint_manifest/src/: integrity.rs  lib.rs
crates/tsuzulint_parser/: Cargo.toml  README.md
crates/tsuzulint_parser/src/: error.rs  lib.rs  markdown.rs  text.rs  traits.rs
crates/tsuzulint_plugin/: Cargo.toml  README.md
crates/tsuzulint_plugin/src/: diagnostic.rs  error.rs  executor.rs  executor_extism.rs  executor_wasmi.rs  host.rs  lib.rs  manifest.rs  test_utils.rs
crates/tsuzulint_plugin/tests/: security_limits.rs
crates/tsuzulint_registry/: Cargo.toml  README.md
crates/tsuzulint_registry/examples/: benchmark_download.rs
crates/tsuzulint_registry/src/: cache.rs  downloader.rs  error.rs  fetcher.rs  hash.rs  http_client.rs  lib.rs  manifest.rs  resolver.rs  security.rs  spec.rs
crates/tsuzulint_registry/tests/: resolver_security.rs  test_ssrf_bypass.rs
crates/tsuzulint_text/: Cargo.toml  README.md
crates/tsuzulint_text/examples/: uax29_test.rs
crates/tsuzulint_text/src/: lib.rs  splitter.rs  tokenizer.rs
crates/tsuzulint_wasm/: Cargo.toml  README.md  build.rs  build.sh  package.json
crates/tsuzulint_wasm/src/: lib.rs
crates/tzlint_abi/: Cargo.toml
crates/tzlint_abi/src/: lib.rs
crates/tzlint_ast/: Cargo.toml
crates/tzlint_ast/src/: lib.rs  morphology.rs
crates/tzlint_cli/: Cargo.toml
crates/tzlint_cli/src/: app.rs  cli.rs  expand.rs  host.rs  main.rs  output.rs  prh_dict.rs  rules.rs
crates/tzlint_core/: Cargo.toml
crates/tzlint_core/src/: cache.rs  dict.rs  engine.rs  fix.rs  io.rs  lib.rs  morphology.rs  net.rs  parse.rs  position.rs  prh.rs
crates/tzlint_core/tests/: config_schema.rs
crates/tzlint_lsp/: Cargo.toml
crates/tzlint_lsp/src/: lib.rs
crates/tzlint_morphology_native/: Cargo.toml
crates/tzlint_morphology_native/examples/: pack_ipadic.rs
crates/tzlint_morphology_native/src/: lib.rs
crates/tzlint_pdk/: Cargo.toml
crates/tzlint_pdk/src/: diagnostic.rs  lib.rs  meta.rs  morphology.rs  node.rs  rule.rs
crates/tzlint_rules/: Cargo.toml
crates/tzlint_rules/src/: lib.rs  test_support.rs  util.rs
crates/tzlint_wasm/: Cargo.toml
crates/tzlint_wasm/src/: lib.rs
rules/: .texide.json  .texide.jsonc  .tsuzulint.jsonc  Cargo.toml  README.md
rules/foundation/: Cargo.toml
rules/max-ten/: Cargo.toml  tsuzulint-rule.json
rules/max-ten/src/: lib.rs
rules/no-doubled-joshi/: Cargo.toml  README.md  texide-plugin.json  texide-rule.json  tsuzulint-rule.json
rules/no-doubled-joshi/src/: lib.rs
rules/no-doubled-joshi/tests/: integration_tests.rs
rules/no-todo/: Cargo.toml  texide-plugin.json  texide-rule.json  tsuzulint-rule.json
rules/no-todo/src/: lib.rs
rules/no-todo/tests/: integration_tests.rs
rules/rules-pdk/: Cargo.toml
rules/rules-pdk/src/: lib.rs
rules/sentence-length/: Cargo.toml  texide-plugin.json  texide-rule.json  tsuzulint-rule.json
rules/sentence-length/src/: lib.rs
(+204 files in other folders)
