# TsuzuLint workspace (binary/command name: `tzlint`; brand: TsuzuLint).
[workspace]
resolver = "2"
members = [
    "crates/tzlint_ast",
    "crates/tzlint_core",
    "crates/tzlint_rules",
    "crates/tzlint_pdk",
    "crates/tzlint_abi",
    "crates/tzlint_cli",
    "crates/tzlint_lsp",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.94" # MSRV policy: latest stable − 2 (matches wasmtime's "last 3 stables"); bump each Rust release. Develop on latest stable.
license = "Apache-2.0"
authors = ["simorgh3196 <simorgh3196@gmail.com>"]
repository = "https://github.com/simorgh3196/tsuzulint"
description = "TsuzuLint — a high-performance natural-language linter for CJK, written in Rust."

# Shared dependency versions. Internal crates reference these via `{ workspace = true }`.
[workspace.dependencies]
# Zero-copy archival for the frozen AST / plugin ABI. The wire layout is pinned
# little-endian with 32-bit relative pointers so a single archive is portable across
# hosts and readable in-place on `wasm32` (32-bit) and native (64-bit) alike. `no_std`
# (alloc only). The golden-byte test in `tzlint_ast` gates any layout drift — including
# drift introduced by an rkyv upgrade — so this acts as the ABI lock.
rkyv = { version = "0.8.16", default-features = false, features = [
    "alloc",            # no_std: alloc-backed Vec/String archival + high-level to_bytes
    "bytecheck",        # checked `rkyv::access` for untrusted boundaries (see abi-spec.md)
    "little_endian",    # pin byte order (overrides the internal default; conflicts with big_endian)
    "aligned",          # pin aligned archived layout (conflicts with unaligned)
    "pointer_width_32", # pin 32-bit relative pointers → portable native(64)/wasm32(32) archive
] }

# Lints applied workspace-wide. `unwrap`/`expect`/`panic` are denied in library code
# (per the design's error-handling rules); the io-guard CI job adds the disallowed-methods
# checks via clippy.toml.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
# Per-rule native fault isolation relies on std::panic::catch_unwind, which requires unwinding.
panic = "unwind"
