# TsuzuLint workspace (binary/command name: `tzlint`; brand: TsuzuLint).
[workspace]
resolver = "2"
members = [
    "crates/tzlint_ast",
    "crates/tzlint_core",
    "crates/tzlint_rules",
    "crates/tzlint_pdk",
    "crates/tzlint_abi",
    "crates/tzlint_cli",
    "crates/tzlint_lsp",
    "crates/tzlint_morphology_native",
    "crates/tzlint_wasm",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.94" # MSRV policy: latest stable ŌłÆ 2 (matches wasmtime's "last 3 stables"); bump each Rust release. Develop on latest stable.
license = "Apache-2.0"
authors = ["simorgh3196 <simorgh3196@gmail.com>"]
repository = "https://github.com/simorgh3196/tsuzulint"
description = "TsuzuLint ŌĆö a high-performance natural-language linter for CJK, written in Rust."

# Shared dependency versions. Internal crates reference these via `{ workspace = true }`.
[workspace.dependencies]
# Zero-copy archival for the frozen AST / plugin ABI. The wire layout is pinned
# little-endian with 32-bit relative pointers so a single archive is portable across
# hosts and readable in-place on `wasm32` (32-bit) and native (64-bit) alike. `no_std`
# (alloc only). The golden-byte test in `tzlint_ast` gates any layout drift ŌĆö including
# drift introduced by an rkyv upgrade ŌĆö so this acts as the ABI lock.
rkyv = { version = "0.8.16", default-features = false, features = [
    "alloc",            # no_std: alloc-backed Vec/String archival + high-level to_bytes
    "bytecheck",        # checked `rkyv::access` for untrusted boundaries (see abi-spec.md)
    "little_endian",    # pin byte order (overrides the internal default; conflicts with big_endian)
    "aligned",          # pin aligned archived layout (conflicts with unaligned)
    "pointer_width_32", # pin 32-bit relative pointers ŌåÆ portable native(64)/wasm32(32) archive
] }

# CommonMark/GFM parser producing an mdast tree with byte-offset positions. Pure parsing
# (no I/O), so it builds for `wasm32` too. `tzlint_core` transforms its mdast into the
# frozen index-AST. Stable since 1.0 (2025-04).
markdown = "1.0"

# Config (de)serialization. `serde` derives the config model; `serde_json` handles `.json`
# and (after a small comment/trailing-comma strip) `.jsonc`/`.tzlintrc`, and is the canonical
# representation for rule-specific `options`. `yaml_serde` is the YAML Organization's maintained,
# permissively licensed (MIT/Apache-2.0) fork of the now-archived `serde_yaml` for `.yaml`/`.yml`;
# its `libyaml-rs` backend is libyaml transpiled to pure Rust (no C/FFI), so it builds for
# `wasm32` too. All are config-only ŌĆö they never touch the frozen AST (guarded by `io-guard`).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"

# Cryptographic content hash for the document-cache key. Collision-resistant (256-bit), which a
# cache that gates correctness needs ŌĆö a key collision would return another document's
# diagnostics. `features = ["pure"]` is MANDATORY: without it `blake3` builds its SIMD backend
# through a C compiler (`cc`), which breaks the uniform/reproducible build and `wasm32`. With
# `pure` it is portable Rust and builds everywhere. Pinned exactly, like rkyv. (The io-guard CI
# job greps that the `pure` feature stays set.)
blake3 = { version = "1.8.5", default-features = false, features = ["pure"] }

# Pure-Rust Zstandard *decoder* (no C/FFI), used to decompress downloaded morphology
# dictionaries behind the Host boundary. Decode-only ŌĆö no encoder ŌĆö so it stays small and, being
# pure Rust, builds for `wasm32` and keeps the uniform/reproducible build (same rationale as
# blake3's `pure`). MIT-licensed. `default-features = false` drops the encoder-side `dict_builder`;
# `std` provides the `std::io::Read` streaming decoder; `hash` keeps zstd's frame-checksum check.
ruzstd = { version = "0.8.3", default-features = false, features = ["std", "hash"] }

# WHATWG-URL parser (servo) for the dictionary-fetch SSRF guard (`tzlint_core::net`). A robust,
# spec-conformant parser is mandatory here: hand-rolling scheme/authority/host parsing is exactly
# where parser-differential SSRF bypasses hide. Pure Rust (idna/percent-encoding/form_urlencoded,
# no C/FFI), so it builds for `wasm32` and keeps the uniform/reproducible build; MIT/Apache-2.0.
# The guard itself does no I/O, so this never pulls networking into the wasm-clean core.
url = "2"

# Argument parsing for the native `tzlint` CLI (the `derive` API: `Parser`/`Subcommand`/
# `ValueEnum`). CLI-only ŌĆö it never reaches the AST or the `wasm32` core (the wasm CI job
# builds `tzlint_core` lib-only), so a native-only dependency here is fine.
clap = { version = "4", features = ["derive"] }

# Blocking HTTPS client for the native CLI's dictionary fetch (`CliHost::fetch`, the single
# network-egress boundary). `rustls` keeps TLS pure-Rust (no OpenSSL/C toolchain), matching the
# project's uniform/reproducible build. CLI-only and native by construction ŌĆö it never reaches
# `tzlint_core` or the `wasm32` build, so the core stays network-free. A deliberately minimal
# feature set (no gzip/json/cookies) keeps the dependency/audit surface small.
ureq = { version = "3", default-features = false, features = ["rustls"] }

# Lints applied workspace-wide. `unwrap`/`expect`/`panic` are denied in library code
# (per the design's error-handling rules); the io-guard CI job adds the disallowed-methods
# checks via clippy.toml.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
# Per-rule native fault isolation relies on std::panic::catch_unwind, which requires unwinding.
panic = "unwind"
