[workspace]
resolver = "2"
members = ["rules-pdk", "no-todo", "sentence-length", "no-doubled-joshi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/simorgh3196/tsuzulint"
rust-version = "1.92"

[workspace.dependencies]
# Extism PDK for WASM rule development
extism-pdk = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Common types (internal crate)
tsuzulint-rule-pdk = { path = "rules-pdk" }

# Testing
pretty_assertions = "1.4"
rstest = "0.26.1"
