[package]
name = "texide_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Caching layer for Texide"

[dependencies]
texide_plugin = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
