[package]
name = "texide_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core linter engine for Texide"

[features]
default = ["native"]
native = ["texide_plugin/native"]
browser = ["texide_plugin/browser"]

[dependencies]
texide_ast = { workspace = true }
texide_parser = { workspace = true }
texide_plugin = { workspace = true, default-features = false }
texide_cache = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
dirs = "6.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
