[package]
name = "texide_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LSP server for Texide"

[[bin]]
name = "texide-lsp"
path = "src/main.rs"

[dependencies]
texide_core = { workspace = true, features = ["native"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
