[package]
name = "texide_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LSP server for Texide"


[dependencies]
texide_core = { workspace = true, features = ["native"] }
texide_parser = { workspace = true }
texide_ast = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-lsp = "0.20"
serde_json = { workspace = true }
