[package]
name = "tsuzulint_ast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AST types for TsuzuLint natural language linter"

[dependencies]
bumpalo = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
