[package]
name = "tsuzulint_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Caching layer for TsuzuLint"

[dependencies]
tsuzulint_plugin = { workspace = true }
tsuzulint_ast = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tsuzulint_ast = { workspace = true }
