[package]
name = "tsuzulint_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Caching layer for TsuzuLint"

[features]
default = ["native"]
native = ["tsuzulint_plugin/native"]
browser = ["tsuzulint_plugin/browser"]

[dependencies]
tsuzulint_plugin = { workspace = true, features = ["rkyv"] }
tsuzulint_ast = { workspace = true, features = ["rkyv"] }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tsuzulint_ast = { workspace = true }
