[package]
name = "tsuzulint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance natural language linter written in Rust"

[[bin]]
name = "tzlint"
path = "src/main.rs"

[dependencies]
tsuzulint_core = { workspace = true, features = ["native"] }
clap = { workspace = true }
miette = { workspace = true }
extism-manifest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
jsonc-parser = { workspace = true, features = ["serde"] }
tsuzulint_lsp = { version = "0.1.0", path = "../tsuzulint_lsp" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tsuzulint_registry = { version = "0.1.0", path = "../tsuzulint_registry" }
tsuzulint_manifest = { version = "0.1.0", path = "../tsuzulint_manifest" }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.182"

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
wiremock = { workspace = true }
regex = "1.12.3"
