[package]
name = "tsuzulint_manifest"
version.workspace = true
edition.workspace = true
description = "Shared manifest types and validation for tsuzulint-rule.json"
license = "MIT"
repository = "https://github.com/simorgh3196/tsuzulint"

[dependencies]
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
