[package]
name = "tsuzulint_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Parser implementations for TsuzuLint"

[dependencies]
tsuzulint_ast = { workspace = true }
markdown = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
