[package]
name = "tsuzulint_plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM plugin system for TsuzuLint"

[features]
default = ["native"]
native = ["extism", "extism-manifest"]
browser = ["wasmi"]

[dependencies]
tsuzulint_ast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Native environment (high performance with JIT)
extism = { workspace = true, optional = true }
extism-manifest = { version = "1.13.0", optional = true }

# Browser/WASM environment (pure Rust interpreter)
wasmi = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
wat = "1.245.1"
