[package]
name = "tsuzulint_plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Plugin system for TsuzuLint natural language linter"

[dependencies]
tsuzulint_text = { workspace = true }
rkyv = { workspace = true, optional = true, features = ["std"] }
extism = { workspace = true, optional = true }
extism-manifest = { workspace = true, optional = true }
wasmi = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
thiserror = { workspace = true }
tracing = { workspace = true }
tsuzulint_ast = { workspace = true }
wat = { version = "1.245", optional = true }

[features]
default = ["native"]
native = ["dep:extism", "dep:extism-manifest"]
browser = ["dep:wasmi"]
test-utils = ["dep:wat"]
rkyv = ["dep:rkyv", "tsuzulint_ast/rkyv"]

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
