[package]
name = "tsuzulint_registry"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true


[dependencies]
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Future dependencies for registry interaction
# reqwest.workspace = true
# sha2.workspace = true
# semver.workspace = true
