[package]
name = "tsuzulint_registry"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true


[dependencies]
jsonschema.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Future dependencies for registry interaction
sha2.workspace = true
hex = "0.4"
futures-util = "0.3"
# semver.workspace = true

[dev-dependencies]
wiremock = "0.6"
