[package]
name = "tsuzulint_registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
tsuzulint_manifest.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Future dependencies for registry interaction
sha2.workspace = true
hex = "0.4"
futures-util = "0.3"
dirs = "6.0.0"
# semver.workspace = true

[dev-dependencies]
wiremock.workspace = true
proptest = "1.10"
tempfile.workspace = true
