[package]
name = "tsuzulint_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for TsuzuLint - browser-based text linting"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tsuzulint_ast = { workspace = true }
tsuzulint_parser = { workspace = true }
tsuzulint_plugin = { workspace = true, default-features = false, features = ["browser"] }
tsuzulint_text = { workspace = true }

wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
