[package]
name = "tzlint_ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Frozen ABI types for TsuzuLint: index-based AST (NodeId(u32)) and Span. no_std-friendly."

[lints]
workspace = true

[dependencies]
rkyv = { workspace = true }
