[package]
name = "tzlint_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The `tzlint` command-line binary."

[lints]
workspace = true

[[bin]]
name = "tzlint"
path = "src/main.rs"

[dependencies]
tzlint_core = { path = "../tzlint_core" }
tzlint_rules = { path = "../tzlint_rules" }
