[package]
name = "tzlint_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The `tzlint` command-line binary."

[lints]
workspace = true

[[bin]]
name = "tzlint"
path = "src/main.rs"

[dependencies]
# The lint pipeline: parser, engine, autofix, config (+ discovery), document cache, the
# position mapper, and the centralized `Host` I/O boundary (the CLI does all of its file
# access through `Host`, never raw `std::fs` — enforced by clippy + the io-guard CI job).
tzlint_core = { path = "../tzlint_core", version = "0.1.0" }
# The diagnostic model and `Rule` trait the engine works in terms of.
tzlint_pdk = { path = "../tzlint_pdk", version = "0.1.0" }
# The built-in rule registry (`builtin_rules`/`RULE_IDS`) the config selects from.
tzlint_rules = { path = "../tzlint_rules", version = "0.1.0" }
# `to_archive`/`access` (the parse → archive → lint bridge for the no-cache path) and `Span`.
tzlint_ast = { path = "../tzlint_ast", version = "0.1.0" }
# The native morphology backend: `LinderaProvider`, wired into a `MorphologyRegistry` when the
# config names a dictionary. This edge finally links a real tokenizer into the binary. It is
# depended on by its capability name (`tzlint_morphology_native`), so the underlying backend
# library stays an internal detail and the io-guard tripwire — which rejects the bare token in any
# non-backend manifest — is satisfied here.
tzlint_morphology_native = { path = "../tzlint_morphology_native", version = "0.1.0" }
# Argument parsing (derive API).
clap = { workspace = true }
# Blocking HTTPS client for `CliHost::fetch` — the CLI's network-egress boundary for dictionary
# acquisition (rustls TLS, pure Rust). Native/CLI-only, so the wasm-clean core stays network-free.
ureq = { workspace = true }
# Glob pattern matching for `lint`/`fix` PATH arguments. Used ONLY for `Pattern::matches_path`
# (pure string matching); the directory walk itself goes through `Host::list_dir`, never
# `glob::glob()` (which would touch `std::fs` directly and bypass the io boundary). CLI-only —
# it never reaches the AST or the `wasm32` core, so a native-only dependency here is fine.
glob = "0.3"
# JSON output. The diagnostic model is serde-free (it is `no_std`/ABI-frozen), so the CLI
# builds the JSON document itself from the diagnostic fields rather than deriving `Serialize`.
serde_json = { workspace = true }
